--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
         <div class="tool-card">
         <h2>PDF Decrypt</h2>
         <p>Remove password protection from PDFs.</p>
-        <a href="/Tools/pdf-decrypt.html" class="btn">Use Tool</a>
+        <a href="/Tools/pdfdecrypt.html" class="btn">Use Tool</a>
         </div>
       </div>
 
