--- a/index.html
+++ b/index.html
@@ -195,9 +195,9 @@
           <a href="/Tools/pwd-generator" class="btn">Use Tool</a>
         </div>
         <div class="tool-card">
-          <h2>PDF Comparer</h2>
-          <p>Compare two PDFs for differences.</p>
-          <a href="/Tools/pdf-compare.html" class="btn">Use Tool</a>
+          <h2>File Converter</h2>
+          <p>All-in-One File Converter.</p>
+          <a href="/Tools/file-converter.html" class="btn">Use Tool</a>
         </div>
         <div class="tool-card">
           <h2>PDF Searchable Text</h2>
