--- a/index.html
+++ b/index.html
@@ -180,12 +180,12 @@
           <a href="/Tools/pdf-splitter.html" class="btn">Use Tool</a>
         </div>
         <div class="tool-card">
-          <h2>QR Contact</h2>
+          <h2>QR Contact Generator</h2>
           <p>Create QR codes for URLs, text, and more.</p>
           <a href="/Tools/qr-generator.html" class="btn">Use Tool</a>
         </div>
         <div class="tool-card">
-          <h2>QR Wi-Fi</h2>
+          <h2>QR Wi-Fi Generator</h2>
           <p>Create QR codes for URLs, text, and more.</p>
           <a href="/Tools/qr-wifi.html" class="btn">Use Tool</a>
         </div>
