--- a/index.html
+++ b/index.html
@@ -195,6 +195,10 @@
           <a href="/Tools/pwd-generator" class="btn">Use Tool</a>
         </div>
         <div class="tool-card">
+          <h2>Advance Word Count</h2>
+          <p>Count word, characters etc.</p>
+          <a href="/Tools/word_count.html" class="btn">Use Tool</a>          
+        <div class="tool-card">
           <h2>File Converter</h2>
           <p>All-in-One File Converter.</p>
           <a href="/Tools/file-converter.html" class="btn">Use Tool</a>
