--- a/index.html
+++ b/index.html
@@ -197,17 +197,17 @@
         <div class="tool-card">
           <h2>Advance Word Count</h2>
           <p>Count word, characters etc.</p>
-          <a href="/Tools/word_count.html" class="btn">Use Tool</a>  
+          <a href="/Tools/word-count.html" class="btn">Use Tool</a>  
         </div>
           <div class="tool-card">
           <h2>Speech-To-Text</h2>
           <p>Convert speecch to text</p>
-          <a href="/Tools/speech_text.html" class="btn">Use Tool</a>  
+          <a href="/Tools/speech-text.html" class="btn">Use Tool</a>  
         </div>
          <div class="tool-card">
           <h2>Text-To-Speech</h2>
           <p>Convert text to speech</p>
-          <a href="/Tools/text_speech.html" class="btn">Use Tool</a>  
+          <a href="/Tools/text-speech.html" class="btn">Use Tool</a>  
         </div>
         <div class="tool-card">
           <h2>File Converter</h2>
