--- a/index.html
+++ b/index.html
@@ -210,6 +210,11 @@
           <a href="/Tools/text-speech.html" class="btn">Use Tool</a>  
         </div>
         <div class="tool-card">
+          <h2>Date / Birthday Calculator</h2>
+          <p>Advance date calculator</p>
+          <a href="/Tools/date-calculator.html" class="btn">Use Tool</a>  
+        </div>
+        <div class="tool-card">
           <h2>File Converter</h2>
           <p>All-in-One File Converter.</p>
           <a href="/Tools/file-converter.html" class="btn">Use Tool</a>
