--- a/index.html
+++ b/index.html
@@ -199,6 +199,11 @@
           <p>Count word, characters etc.</p>
           <a href="/Tools/word-count.html" class="btn">Use Tool</a>  
         </div>
+            <div class="tool-card">
+          <h2>Dictionary</h2>
+          <p>Advance Dictionary</p>
+          <a href="/Tools/advance-dictionary.html" class="btn">Use Tool</a>  
+        </div>
           <div class="tool-card">
           <h2>Speech-To-Text</h2>
           <p>Convert speecch to text</p>
