--- a/index.html
+++ b/index.html
@@ -220,6 +220,11 @@
           <a href="/Tools/date-calculator.html" class="btn">Use Tool</a>  
         </div>
         <div class="tool-card">
+          <h2>Advance Calculator</h2>
+          <p>Advance Calculator</p>
+          <a href="/Tools/advance-calculator.html" class="btn">Use Tool</a>  
+        </div>
+        <div class="tool-card">
           <h2>File Converter</h2>
           <p>All-in-One File Converter.</p>
           <a href="/Tools/file-converter.html" class="btn">Use Tool</a>
